--- a/pubspecs.yaml
+++ b/pubspecs.yaml
@@ -28,16 +28,12 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-
   flutter:
-
     sdk: flutter
-
-  http: ^1.2.1
-
+  http: ^1.1.0
+  
+  intl: ^0.18.1
   flutter_material_color_picker: ^1.1.0
-
-
   cupertino_icons: ^1.0.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -95,3 +91,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
